--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,123 @@
+
 body{
-	background-image: url("../images/stardust.png");
 	color:#ffd700;
 	font-size: 22px;
+	background-image: url("../images/stardust.png");
+	/*overflow:hidden;*/
 }
 
 h1{
+	font-size: 80px;
+}
+
+#answerChoicesContainer{
+	/*overflow: auto;*/
+	/*max-height: 75%;*/
+}
+
+.answerChoiceBox{
+	text-align: center;
+	width:100%;
+	margin-top:10px;
+	margin-bottom: 10px;
+}
+
+.answerChoiceContainer{
+	display:inline-block;
+	text-align: left;
+	border:2px solid #ffd700;
+	padding:10px;
+	width:98%;
+}
+
+.answerChoiceContainer:active,
+.answerChoiceContainer:hover,
+.playAgain:hover,
+.playAgain:active{
+	color:#444349;
+	background-color:#ffd700;
+	border:2px solid #404040;
+	width:100%; 
+	cursor:pointer;
+}
+
+#bodyContainer{
+	
+}
+
+#gameHeader{
+	background-image: url("../images/ep_naturalblack.png");
+	position:relative;
+	z-index:999;
+}
+
+#overlay{
+	background-image: url("../images/subtle_grunge.png");
+	position:absolute;
+	color:#404040;
+	top:-100%;
+	z-index:99;
+	height:100%;
+	width:100%;
+}
+
+#overlayAnswer{
+	font-size: 30px;
+}
+
+#overlayImageContainer{
+	width:100%;
+	max-height: 500px;
+	overflow: hidden;
+}
+
+#overlayImage{
+	/*max-height: 500px;*/
+}
+
+#overlayTitle{
 	font-size: 60px;
 }
 
 .page-header{
 	border-bottom:none;
+}
+
+.playAgain{
+	position:relative;
+	text-align: center;
+	font-size: 30px;
+	border: 2px solid #ffd700;
+	color:#ffd700;
+	line-height: 2.0;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	width:auto;
+	margin-left:auto;
+	margin-right:auto;
+	max-width: 300px;
+}
+
+#questionContainer{
+	font-size: 30px;
+	margin-bottom:10px;
+	margin-top: 10px;
+	margin-left: 0px;
+}
+
+.row{
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.thumbnail {
+    border: 0 none;
+    box-shadow: none;
+    padding:0;
+}
+
+#timeContainer{
+	font-size: 70px;
+	text-align: center;
+	margin:10px;
 }
