--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,8 +66,8 @@ h1{
 }
 
 #overlayImageContainer{
-	width:100%;
-	max-height: 500px;
+	max-width:100%;
+	max-height: 550px;
 	overflow: hidden;
 }
 
